# mts-ml-cup

./: .gitignore  pyproject.toml
docs/: baseline.md  ideas.md  nn.md  vw.md
mts_ml_cup/: catboost.py  preprocessing.py  rosstat.py  urls.py  utils.py  validation.py
mts_ml_cup/feature_engineering/: __init__.py  device.py  geo.py  history.py  part_of_day.py  rosstat.py  session.py  time.py  url.py  url_text.py  usage.py
mts_ml_cup/modeling/: __init__.py  catboost.py  validation.py
mts_ml_cup/preprocessing/: __init__.py  raw.py  rosstat.py  urls.py
notebooks/: 06. Classical models. Wide data.ipynb  0_raw-preprocessing.ipynb  1_feature-engineering.ipynb  2_fe-lifestream.ipynb  4_fit-catboost.ipynb  5_combinations.ipynb  Untitled.ipynb  Untitled1.ipynb  als-baseline.ipynb  catboost-raw.ipynb  catboost-v2.ipynb  catboost.ipynb  data-conversion.ipynb  eda.ipynb  feateng.ipynb  lifestream.ipynb  mini-lm.ipynb  modeling.ipynb  nn_data_prep.ipynb  nn_pretrain.ipynb  nn_stack.ipynb  parse.ipynb  raw-preprocessing.ipynb  rosstat.ipynb  tfidf-baseline.ipynb  url-analysis.ipynb  vowpal-wabbit.ipynb
submissions/: baseline-catboost.csv  cb-text-dval.csv  cb-text.csv  cb-tokens.csv  cv+mnb-baseline.csv  test-private-2.csv  test-private.csv  tfidf+logregcv-baseline-2.csv  tfidf+logregcv-baseline.csv  tfidf+mnb-baseline.csv  vw-2lvl-domains-u23.csv  vw-age-hinge.csv  vw-l.csv  vw-reg.csv  vw-sorted-urls-u23.csv  vw.csv
