[tool.poetry]
name = "mts-ml-cup"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin <andrey.babkin@sbermarket.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
catboost = "^1.1.1"
pyarrow = "^11.0.0"
ipykernel = "^6.21.2"
polars = "^0.16.6"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
