[tool.poetry]
name = "mts-ml-cup"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin <andrey.babkin.ru71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
catboost = "^1.1.1"
pyarrow = "^11.0.0"
ipykernel = "^6.21.2"
polars = "^0.16.6"
tqdm = "^4.64.1"
pytorch-lifestream = "^0.5.2"
setuptools = "^67.4.0"
pypdfium2 = "^4.0.0"
cyrtranslit = "^1.1"
aioretry = "^5.0.2"
transformers = "^4.26.1"
category-encoders = "^2.6.0"
tsfresh = "^0.20.0"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
